@@ -1,3 +1,15 @@
+2004-01-14  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
+
+	* generic/tclDictObj.c: Assorted dict fixes from Peter Spjuth
+	relating to [Bug 876170].
+	(SetDictFromAny): Make sure that lists retain their ordering even
+	when converted to dictionaries and back.
+	(TraceDictPath): Correct object reference count handling!
+	(DictReplaceCmd, DictRemoveCmd): Stop object leak.
+	(DictIncrCmd,DictLappendCmd,DictAppendCmd,DictSetCmd,DictUnsetCmd): 
+	Simpler handling of reference counts when assigning to variables.
+	* tests/dict.test (dict-19.2): Memory leak stress test
+
 2004-01-13  Don Porter	<dgp@users.sourceforge.net>
 
 	* generic/tclCmdMZ.c (Tcl_SwitchObjCmd):  Silence compiler warnings.
